*Version 3.4.0*
* Prevent NPEs that had been thrown in several json imports, particularly event detectors and handlers
* Increase the XID field to 100 characters from 50 
* Adding new module definitions for custom queries to be used as helpers in REST query endpoints 
* Adding definition for Events by Data Point Tag query

*Version 3.3.4*
* Export publishers in nightly backup
* Add INFO level log message to indicate end of configuration backup task
* Add PointValueQuery object into script environments and rollup codes
* Fix memory leak from not removing context listener in websocket code
* Fix ALPN agent jar not being added to boot directory in bundle zip file
* Shutdown task is now the highest priority thread.
* Fix AnalogChangeEventDetector to raise event every change with zero duration set, fix zero duration logged only
* Catch nightly purge errors and log them

*Version 3.3.3*
* Fix bug where data point tags were not exported when using the search-and-export feature of the data point tables on the Data Source Edit page
* Attempt to open unknown comm port identifiers as JSSC serial ports before reporting port not found failure
* Check owned ports during port list refresh
* Fix deadlock issue when changing password due to websocket code upgrading a read lock to a write lock
* Move websocket notifications, raising events etc out of transaction in UserDao

*Version 3.3.2*
* Maximum file upload size configurable via env property web.fileUpload.maxSize
* Removed rest.customDateOutputFormat and rest.customDateInputFormat env properties, REST dates are always ISO 8601 format now
* Performance improvements in JSON exports, more consistency in missing points export as null xids
* Performance improvements for Audit tracking, more efficient change detection

*Version 3.3.1*
* Removing superadmin duplicate permission text box on legacy system settings page
* Adding validation so users know its not possible to change the read only superadmin permission