@@ -23,10 +23,10 @@
 <Configuration packages="com.serotonin.m2m2.rt.console">
 	<Appenders>
 		<Console name="stdout" target="SYSTEM_OUT">
-			<PatternLayout pattern="%-5p %d{ISO8601} (%C.%M:%L) - %m %n"/>
+			<PatternLayout pattern="%-5p %d{ISO8601} [%t] - %m %n"/>
 		</Console>
 		<RollingRandomAccessFile name="logfile" filePattern="${sys:ma.home}/logs/%d{MM-dd-yyyy}-%i.ma.log" fileName="${sys:ma.home}/logs/ma.log">
-			<PatternLayout pattern="%-5p %d{ISO8601} (%C.%M:%L) - %m %n"/>
+			<PatternLayout pattern="%-5p %d{ISO8601} [%t] - %m %n"/>
 			<Policies>
 				<OnStartupTriggeringPolicy />
 				<TimeBasedTriggeringPolicy />
@@ -40,20 +40,17 @@
 			</DefaultRolloverStrategy>
 		</RollingRandomAccessFile>
 		<MangoFrontendAppender name="frontend">
-			<PatternLayout pattern="%-5p %d{ISO8601} (%C.%M:%L) - %m %n"/>
+			<PatternLayout pattern="%-5p %d{ISO8601} %m %n"/>
 		</MangoFrontendAppender>
-		<Async name="async" includeLocation="true">
-			<AppenderRef ref="logfile"/>
-			<AppenderRef ref="stdout" />
-			<AppenderRef ref="frontend" />
-		</Async>
 	</Appenders>
 	<Loggers>
 		<Logger name="org" level="error"/>
 		<Logger name="com.serotonin.m2m2" level="info"/>
 		<Logger name="com.infiniteautomation" level="info"/>
-		<Root level="error">
-			<AppenderRef ref="async"/>
-		</Root>
+        <Root level="error" >
+            <AppenderRef ref="stdout" />
+            <AppenderRef ref="logfile"/>
+            <AppenderRef ref="frontend"/>
+        </Root>
 	</Loggers>
 </Configuration>
